# parcial-1-prog

./: CHECKLIST.md  README.md
backend/: database.py  main.py  pyproject.toml  uow.py
backend/models/: __init__.py  models.py
backend/repositories/: category_repository.py  ingredient_repository.py  product_repository.py
backend/routers/: category_router.py  ingredient_router.py  product_router.py
backend/schemas/: __init__.py  categoria.py  ingrediente.py  producto.py
backend/services/: category_service.py  ingredient_service.py  product_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: CategoryTree.tsx  DataTable.tsx  Modal.tsx
frontend/src/hooks/: useApiHooks.ts  useCategories.ts  useIngredients.ts  useProducts.ts
frontend/src/pages/: CategoriesPage.tsx  IngredientsPage.tsx  ProductDetailPage.tsx  ProductsPage.tsx
frontend/src/types/: index.ts
frontend/src/utils/: api.ts
