[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parcial-backend"
version = "0.1.0"
description = "Backend for parcial CRUD"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlmodel",
    "psycopg2-binary",
    "python-multipart"
]

[tool.hatch.build.targets.wheel]
packages = ["."]